--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,10 +4,16 @@ services:
     container_name: edge-tunnel
     environment:
       - WG_HOST=edge.xoxoent.space
-      - PASSWORD=${ADMIN_PASSWORD}
-      - WG_PORT=51820
       - PORT=51821
+      - WG_PORT=51820
       - UI_TRAFFIC_STATS=true
+      # V15 Initialization
+      - INIT_ENABLED=true
+      - INIT_USERNAME=admin
+      - INIT_PASSWORD=${ADMIN_PASSWORD}
+      - INIT_HOST=edge.xoxoent.space
+      - INIT_PORT=51820
+      - INIT_DNS=1.1.1.1,1.0.0.1
     volumes:
       - ./data:/etc/wireguard
       - /lib/modules:/lib/modules:ro
